{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 27,
  "lineage": "2d54449b-11f4-cd30-ccd7-0a02b235e6ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:internet-gateway/igw-0aa5999678131d616",
            "id": "igw-0aa5999678131d616",
            "owner_id": "022598194260",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-0e92d651631db2b49"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "My_VPC_Security_ACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:network-acl/acl-090f40354e0ea21ed",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-090f40354e0ea21ed",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "022598194260",
            "subnet_ids": [
              "subnet-0ceb7e1b1f3164745"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-0e92d651631db2b49"
          },
          "dependencies": [
            "aws_subnet.My_VPC_Subnet",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa5999678131d616",
            "id": "r-rtb-04fd195c5384b8f9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04fd195c5384b8f9a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.My_VPC_GW",
            "aws_route_table.My_VPC_route_table",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04fd195c5384b8f9a",
            "owner_id": "022598194260",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My VPC Route Table"
            },
            "vpc_id": "vpc-0e92d651631db2b49"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048d8b101aab2fe9c",
            "route_table_id": "rtb-04fd195c5384b8f9a",
            "subnet_id": "subnet-0ceb7e1b1f3164745"
          },
          "dependencies": [
            "aws_route_table.My_VPC_route_table",
            "aws_subnet.My_VPC_Subnet",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:security-group/sg-0b2aefd7600766c8c",
            "description": "My VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2aefd7600766c8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": "",
            "owner_id": "022598194260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "My VPC Security Group",
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e92d651631db2b49"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-0ceb7e1b1f3164745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ceb7e1b1f3164745",
            "map_public_ip_on_launch": true,
            "owner_id": "022598194260",
            "tags": {
              "Name": "My VPC Subnet"
            },
            "vpc_id": "vpc-0e92d651631db2b49"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:vpc/vpc-0e92d651631db2b49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b860c1f861df760",
            "default_route_table_id": "rtb-0b3f608b0cc2af940",
            "default_security_group_id": "sg-07a65241423817e36",
            "dhcp_options_id": "dopt-84d053fe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e92d651631db2b49",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b3f608b0cc2af940",
            "owner_id": "022598194260",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}